retrieveUnpackaged/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Tipo_de_poliza__c</fullName>
        <label>Tipo de póliza</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>U. Garantizada platino</fullName>
                </value>
                <value>
                    <fullName>U. Garantizada</fullName>
                </value>
                <value>
                    <fullName>Global Semestres</fullName>
                </value>
                <value>
                    <fullName>U. Segura completo</fullName>
                </value>
                <value>
                    <fullName>U. Segura semestres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_producto__c</fullName>
        <label>Tipo de producto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asignación de cupo</fullName>
                </value>
                <value>
                    <fullName>Crédito de vivienda nueva</fullName>
                </value>
                <value>
                    <fullName>Leasing habitacional vivienda nueva</fullName>
                </value>
                <value>
                    <fullName>Crédito de vivienda usada</fullName>
                </value>
                <value>
                    <fullName>Leasing habitacional vivienda usada</fullName>
                </value>
                <value>
                    <fullName>Mejoramiento de vivienda</fullName>
                </value>
                <value>
                    <fullName>Compra de cartera</fullName>
                </value>
                <value>
                    <fullName>Cuenta de ahorros</fullName>
                    <default>true</default>
                    <label>Cuenta de ahorros</label>
                </value>
                <value>
                    <fullName>CDT</fullName>
                </value>
                <value>
                    <fullName>Seguro Educativo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_vivienda__c</fullName>
        <label>Tipo de vivienda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vis</fullName>
                </value>
                <value>
                    <fullName>No Vis</fullName>
                </value>
                <value>
                    <fullName>Vipa</fullName>
                </value>
                <value>
                    <fullName>Vip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_vivienda_proyecto__c</fullName>
        <formula>Proyecto__r.Tipo_de_proyecto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de vivienda proyecto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_a_consignar__c</fullName>
        <label>Valor a consignar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_a_consignar_texto__c</fullName>
        <description>Convierte el valor a consignar en texto con el fin de evitar problemas de formato en la exportación</description>
        <formula>TEXT( Valor_a_consignar__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor a consignar texto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_de_la_cuenta__c</fullName>
        <label>Valor de la cuenta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_de_la_cuenta_texto__c</fullName>
        <description>Convierte el valor de la cuenta a texto con el fin de evitar problemas en la exportación</description>
        <formula>TEXT( Valor_de_la_cuenta__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor de la cuenta texto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_de_la_poliza__c</fullName>
        <label>Valor de la póliza</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_del_credito__c</fullName>
        <label>Valor del crédito</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_del_credito_texto__c</fullName>
        <description>Convierte el valor del crédito a texto con el fin de evitar problemas de formato en la exportación</description>
        <formula>TEXT( Valor_del_credito__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor del crédito texto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valor_del_inmueble__c</fullName>
        <label>Valor del producto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor_del_inmueble_texto__c</fullName>
        <description>Convierte a texto el campo valor del inmueble con el fin de evitar problemas de formato en la exportación</description>
        <formula>TEXT( Valor_del_inmueble__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor del inmueble texto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vive_en_el_inmueble__c</fullName>
        <label>Vive en el inmueble</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>propietario_de_la_oportunidad__c</fullName>
        <formula>Owner.FirstName&amp;&quot; &quot;&amp;Owner.MiddleName&amp;&quot; &quot;&amp;Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>propietario de la oportunidad</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>B3_Oportunidades_de_esta_semana</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Tipo_de_producto__c</columns>
        <columns>Resultado_del_Prevalidador__c</columns>
        <columns>Proyecto__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Valor_del_inmueble__c</columns>
        <columns>propietario_de_la_oportunidad__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Regional__c</field>
            <operation>equals</operation>
            <value>Bucaramanga</value>
        </filters>
        <filters>
            <field>Canal_de_atencion__c</field>
            <operation>notEqual</operation>
            <value>Canal Digital</value>
        </filters>
        <label>BC3. Oportunidades de esta semana</label>
        <sharedTo>
            <role>Gte_Cial_Bucaramanga</role>
            <role>Jefe_Comercial_Bucaramanga</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BC1_Oportunidades_de_hoy</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Tipo_de_producto__c</columns>
        <columns>Resultado_del_Prevalidador__c</columns>
        <columns>Proyecto__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Valor_del_inmueble__c</columns>
        <columns>propietario_de_la_oportunidad__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Regional__c</field>
            <operation>equals</operation>
            <value>Bucaramanga</value>
        </filters>
        <filters>
            <field>Canal_de_atencion__c</field>
            <operation>notEqual</operation>
            <value>Canal Digital</value>
        </filters>
        <label>BC1. Oportunidades de hoy</label>
        <sharedTo>
            <role>Gte_Cial_Bucaramanga</role>
            <role>Jefe_Comercial_Bucaramanga</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BC2_Oportunidades_de_ayer</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Tipo_de_producto__c</columns>
        <columns>Resultado_del_Prevalidador__c</columns>
        <columns>Proyecto__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Valor_del_inmueble__c</columns>
        <columns>propietario_de_la_oportunidad__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Regional__c</field>
            <operation>equals</operation>
            <value>Bucaramanga</value>
        </filters>
        <filters>
            <field>Canal_de_atencion__c</field>
            <operation>notEqual</operation>
            <value>Canal Digital</value>
        </filters>
        <label>BC2. Oportunidades de ayer</label>
        <sharedTo>
            <role>Gte_Cial_Bucaramanga</role>
            <role>Jefe_Comercial_Bucaramanga</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BC4_Oportunidades_de_este_mes</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Tipo_de_producto__c</columns>
        <columns>Resultado_del_Prevalidador__c</columns>
        <columns>Proyecto__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Valor_del_inmueble__c</columns>
        <columns>propietario_de_la_oportunidad__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Regional__c</field>
            <operation>equals</operation>
            <value>Bucaramanga</value>
        </filters>
        <filters>
            <field>Canal_de_atencion__c</field>
            <operation>notEqual</operation>
            <value>Canal Digital</value>
        </filters>
        <label>BC4. Oportunidades de este mes</label>
        <sharedTo>
            <role>Gte_Cial_Bucaramanga</role>
            <role>Jefe_Comercial_Bucaramanga</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BC5_Oportunidades_en_Recepci_n_Doc</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Tipo_de_producto__c</columns>
        <columns>Resultado_del_Prevalidador__c</columns>
        <columns>Proyecto__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Valor_del_inmueble__c</columns>
        <columns>propietario_de_la_oportunidad__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Recepción de documentos</value>
        </filters>
        <filters>
            <field>Regional__c</field>
            <operation>equals</operation>
            <value>Bucaramanga</value>
        </filters>
        <filters>
            <field>Canal_de_atencion__c</field>
            <operation>notEqual</operation>
            <value>Canal Digital</value>
        </filters>
        <label>BC5. Oportunidades en Recepción Doc</label>
        <sharedTo>
            <role>Gte_Cial_Bucaramanga</role>
            <role>Jefe_Comercial_Bucaramanga</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BC6_Oportunidades_Abiertas</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Tipo_de_producto__c</columns>
        <columns>Resultado_del_Prevalidador__c</columns>
        <columns>Proyecto__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Valor_del_inmueble__c</columns>
        <columns>propietario_de_la_oportunidad__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Abierta</value>
        </filters>
        <filters>
            <field>Regional__c</field>
            <operation>equals</operation>
            <value>Bucaramanga</value>
        </filters>
        <filters>
            <field>Canal_de_atencion__c</field>
            <operation>notEqual</operation>
            <value>Canal Digital</value>
        </filters>
        <label>BC6. Oportunidades Abiertas</label>
        <sharedTo>
            <role>Gte_Cial_Bucaramanga</role>
            <role>Jefe_Comercial_Bucaramanga</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BC7_Oportunidades_Detenidas</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Tipo_de_producto__c</columns>
        <columns>Resultado_del_Prevalidador__c</columns>
        <columns>Proyecto__c</columns>
        <columns>Valor_del_inmueble__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>propietario_de_la_oportunidad__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Detenida</value>
        </filters>
        <filters>
            <field>Regional__c</field>
            <operation>equals</operation>
            <value>Bucaramanga</value>
        </filters>
        <label>BC7. Oportunidades Detenidas</label>
        <sharedTo>
            <role>Gte_Cial_Bucaramanga</role>
            <role>Jefe_Comercial_Bucaramanga</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BC8_Oportunidades_Anuladas</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Tipo_de_producto__c</columns>
        <columns>Resultado_del_Prevalidador__c</columns>
        <columns>Proyecto__c</columns>
        <columns>Valor_del_inmueble__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>propietario_de_la_oportunidad__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Anulada</value>
        </filters>
        <filters>
            <field>Regional__c</field>
            <operation>equals</operation>
            <value>Bucaramanga</value>
        </filters>
        <label>BC8. Oportunidades Anuladas</label>
        <sharedTo>
            <role>Gte_Cial_Bucaramanga</role>
            <role>Jefe_Comercial_Bucaramanga</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BC9_Oportunidades_Ganadas</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Tipo_de_producto__c</columns>
        <columns>Resultado_del_Prevalidador__c</columns>
        <columns>Proyecto__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Valor_del_inmueble__c</columns>
        <columns>propietario_de_la_oportunidad__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Radicado,Ganada</value>
        </filters>
        <filters>
            <field>Regional__c</field>
            <operation>equals</operation>
            <value>Bucaramanga</value>
        </filters>
        <label>BC9. Oportunidades Ganadas</label>
        <sharedTo>
            <role>Gte_Cial_Bucaramanga</role>
            <role>Jefe_Comercial_Bucaramanga</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BQ1_Oportunidades_de_hoy</fullName>
        <columns>Origen__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Tipo_de_producto__c</columns>
        <columns>Resultado_del_Prevalidador__c</columns>
        <columns>Proyecto__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Valor_del_inmueble__c</columns>
        <columns>propietario_de_la_oportunidad__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Regional__c</field>
            <operation>equals</operation>
            <value>Barranquilla</value>
        </filters>
        <label>BQ1. Oportunidades de hoy</label>
        <sharedTo>
            <role>Gte_Cial_Barranquilla</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BQ2_Oportunidades_de_ayer</fullName>
        <columns>Origen__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Tipo_de_producto__c</columns>
        <columns>Resultado_del_Prevalidador__c</columns>
        <columns>Proyecto__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Valor_del_inmueble__c</columns>
        <columns>propietario_de_la_oportunidad__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>Regional__c</field>
            <operation>equals</operation>
            <value>Barranquilla</value>
        </filters>
        <label>BQ2. Oportunidades de ayer</label>
        <sharedTo>
            <role>Gte_Cial_Barranquilla</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BQ3_Oportunidades_de_esta_semana</fullName>
        <columns>Origen__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Tipo_de_producto__c</columns>
        <columns>Resultado_del_Prevalidador__c</columns>
        <columns>Proyecto__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Valor_del_inmueble__c</columns>
        <columns>propietario_de_la_oportunidad__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Regional__c</field>
            <operation>equals</operation>
            <value>Barranquilla</value>
        </filters>
        <label>BQ3. Oportunidades de esta semana</label>
        <sharedTo>
            <role>Gte_Cial_Barranquilla</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BQ4_Oportunidades_de_este_mes</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Tipo_de_producto__c</columns>
        <columns>Resultado_del_Prevalidador__c</columns>
        <columns>Proyecto__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Valor_del_inmueble__c</columns>
        <columns>propietario_de_la_oportunidad__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Regional__c</field>
            <operation>equals</operation>
            <value>Barranquilla</value>
        </filters>
        <label>BQ4. Oportunidades de este mes</label>
        <sharedTo>
            <role>Gte_Cial_Barranquilla</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BQ5_Oportunidades_Abiertas</fullName>
        <columns>Origen__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Tipo_de_producto__c</columns>
        <columns>Resultado_del_Prevalidador__c</columns>
        <columns>Proyecto__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Valor_del_inmueble__c</columns>
        <columns>propietario_de_la_oportunidad__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Abierta</value>
        </filters>
        <filters>
            <field>Regional__c</field>
            <operation>equals</operation>
            <value>Barranquilla</value>
        </filters>
        <label>BQ5. Oportunidades Abiertas</label>
        <sharedTo>
            <role>Gte_Cial_Barranquilla</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BQ6_Oportunidades_en_Recepci_n_Doc</fullName>
        <columns>Origen__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Tipo_de_producto__c</columns>
        <columns>Resultado_del_Prevalidador__c</columns>
        <columns>Proyecto__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>Valor_del_inmueble__c</columns>
        <columns>propietario_de_la_oportunidad__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Recepción de documentos</value>
        </filters>
        <filters>
            <field>Regional__c</field>
            <operation>equals</operation>
            <value>Barranquilla</value>
        </filters>
        <label>BQ6. Oportunidades en Recepción Doc</label>
        <sharedTo>
            <role>Gte_Cial_Barranquilla</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Creditos_leasing_y_mejoramientos</fullName>
        <active>true</active>
        <businessProcess>Créditos%2C leasing%2C mejoramiento de vivienda</businessProcess>
        <label>Créditos, leasing y mejoramientos de vivienda</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cuenta_de_ahorros_CDT</fullName>
        <active>true</active>
        <businessProcess>Cuenta de ahorros - CDT</businessProcess>
        <label>Cuenta de ahorros - CDT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hipotecario</fullName>
        <active>true</active>
        <businessProcess>Créditos%2C leasing%2C mejoramiento de vivienda</businessProcess>
        <label>Hipotecario</label>
    </recordTypes>
    <recordTypes>
        <fullName>Seguro_educativo</fullName>
        <active>true</active>
        <businessProcess>Créditos%2C leasing%2C mejoramiento de vivienda</businessProcess>
        <description>Tipo de registro para seguro educativo</description>
        <label>Seguro educativo</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>OP001_Valida_registro_constructora</fullName>
        <active>false</active>
        <description>Cuando el tipo de producto es vivienda nueva, se debe diligenciar el campo constructora.</description>
        <errorConditionFormula>AND (
ISBLANK (  Constructora_nombre__c  ),
NOT ISNEW(),
 OR  (
   ISPICKVAL ( Tipo_de_producto__c , &quot;Crédito de vivienda nueva&quot;), 
   ISPICKVAL ( Tipo_de_producto__c, &quot;Leasing habitacional vivienda nueva&quot;)
))</errorConditionFormula>
        <errorMessage>OP-001. Si el tipo de producto es crédito vivienda nueva o leasing habitacional vivienda nueva debe registrar la constructora.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OP002_Valida_registro_inmobiliaria_ide</fullName>
        <active>true</active>
        <description>Cuando el campo tipo de producto es igual a Leasing habitacional vivienda usada, se debe diligenciar el campo Inmueble identificado.</description>
        <errorConditionFormula>AND (
ISPICKVAL (  Inmueble_identificado__c , &quot;&quot; ),
 OR  (
   ISPICKVAL ( Tipo_de_producto__c , &quot;Crédito vivienda usada&quot;), 
   ISPICKVAL ( Tipo_de_producto__c, &quot;Leasing habitacional vivienda usada&quot;)
))</errorConditionFormula>
        <errorDisplayField>Inmueble_identificado__c</errorDisplayField>
        <errorMessage>OP-002 Si el tipo de producto es crédito vivienda usada o leasing habitacional vivienda usada debe registrar el inmueble identificado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OP003_Valida_registro_libre_de_gravament</fullName>
        <active>true</active>
        <description>Cuando el tipo de producto es Mejoramiento de vivienda, se debe diligenciar el campo Libre de gravámenes o deudas.</description>
        <errorConditionFormula>AND( 

ISPICKVAL(Tipo_de_producto__c, &quot;Mejoramiento de vivienda&quot;), 

OR(
ISPICKVAL( Libre_de_gravamenes_hipotecas_o_deudas__c ,&quot;&quot;) 

))</errorConditionFormula>
        <errorDisplayField>Libre_de_gravamenes_hipotecas_o_deudas__c</errorDisplayField>
        <errorMessage>OP-003 Si el tipo de producto es mejoramiento de vivienda debe registrar el campo libre de gravámenes, hipotecas o deudas</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OP004_Valida_registro_red_de_oficinas</fullName>
        <active>true</active>
        <description>Cuando el campo canal de atención es igual a Red de oficinas se debe diligenciar el campo Oficina.</description>
        <errorConditionFormula>AND ( 
   ISPICKVAL ( Canal_de_atencion__c , &quot;Red de oficinas&quot;), 
   ISPICKVAL (Oficina__c , &quot;&quot;)
)</errorConditionFormula>
        <errorMessage>OP-004. Debe registrar una oficina si el canal de atención es red de oficinas.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OP005_Fecha_cierre_no_menor_a_hoy</fullName>
        <active>true</active>
        <description>La fecha de cierre no puede ser inferior a la actual.</description>
        <errorConditionFormula>AND (
ISNEW (),
CloseDate &lt; TODAY()
)</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>OP-005. La fecha de cierre debe ser mayor o igual a la de hoy.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OP006_Valida_tipo_etapa_abierta</fullName>
        <active>false</active>
        <description>Cuando la etapa de la oportunidad es abierta, el campo tipo debe ser diligenciado.</description>
        <errorConditionFormula>AND(

 $Profile.Id &lt;&gt; &quot;00eo0000000TUb1&quot;,
 ISPICKVAL(StageName,&quot;Abierta&quot;), 
 ISPICKVAL(Tipo__c,&quot;&quot;)

)</errorConditionFormula>
        <errorMessage>OP-006. Si la etapa de la oportunidad es &quot;Abierta&quot;, debe especificar el tipo.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OP007_Valida_constructora_y_Proyecto</fullName>
        <active>true</active>
        <description>Cuando el tipo de producto es vivienda nueva, se debe diligenciar los campos Constructora y proyecto.</description>
        <errorConditionFormula>AND(  
NOT ISNEW(),
ISPICKVAL(Tipo_de_producto__c,&quot;Crédito de vivienda nueva&quot;) ,
 $Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;, 

OR(
ISBLANK( Proyecto__c ) 

))</errorConditionFormula>
        <errorMessage>OP-007. Si el tipo de producto es Crédito de vivienda nueva debe registrar los campos Constructora y Proyecto.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OP008_Constructora_y_Proyecto_leasing_VN</fullName>
        <active>true</active>
        <description>Cuando el tipo de producto es Leasing habitacional vivienda nueva, se debe diligenciar los campos Constructora y proyecto.</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Tipo_de_producto__c,&quot;Leasing habitacional vivienda nueva&quot;) , 

ISBLANK( Constructora_nombre__c  ), 
ISBLANK( Proyecto__c ) 

)</errorConditionFormula>
        <errorMessage>OP-008. Si el tipo de producto es Crédito de vivienda nueva debe registrar los campos Constructora y Proyecto.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OP009_Valida_registro_del_convenio</fullName>
        <active>true</active>
        <description>Cuando el campo Tiene convenio es igual a &quot;Si&quot; se debe diligenciar el campo Convenio.</description>
        <errorConditionFormula>AND (
ISPICKVAL (   Tiene_convenio__c , &quot;Si&quot; ),
 ISBLANK ( Convenio__c ) 
)</errorConditionFormula>
        <errorDisplayField>Convenio__c</errorDisplayField>
        <errorMessage>OP-009. Si la oportunidad tiene convenio debe registrar este campo.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OP010_Valida_modificacion_tipo_de_vivien</fullName>
        <active>true</active>
        <description>Cuando el tipo de producto es Crédito de vivienda nueva, o Leasing habitacional vivienda nueva.</description>
        <errorConditionFormula>AND( 
ISCHANGED( Tipo_de_vivienda__c ) , 
$Profile.Id &lt;&gt; &quot;00eo0000000uvB5&quot;,

OR( 
ISPICKVAL( Tipo_de_producto__c, &quot;Crédito de vivienda nueva&quot;), 
ISPICKVAL( Tipo_de_producto__c, &quot;Leasing habitacional vivienda nueva&quot;) 
))</errorConditionFormula>
        <errorDisplayField>Tipo_de_vivienda__c</errorDisplayField>
        <errorMessage>OP-010. No modificar este campo debido a que se actualiza automáticamente. Si no actualiza oprima click en modificar - guardar.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OP011_Validar_tipo_persona</fullName>
        <active>true</active>
        <description>Cuando el tipo de producto es cuenta de ahorros, en el campo Tipo de persona no se puede seleccionar Jurídica.</description>
        <errorConditionFormula>AND( ISPICKVAL(Tipo_de_producto__c, &apos;Cuenta de ahorros&apos;),
 ISPICKVAL( Tipo_de_persona__c , &apos;Jurídica&apos;) )</errorConditionFormula>
        <errorDisplayField>Tipo_de_persona__c</errorDisplayField>
        <errorMessage>OP-011. El Tipo de Persona no puede ser Jurídica para el Tipo de Producto Cuenta de ahorros.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OP012_Validacion_propietario_del_registr</fullName>
        <active>true</active>
        <description>Solamente el propietario de la cuenta y los perfiles autorizados pueden modificar el registro.</description>
        <errorConditionFormula>Account.OwnerId  &lt;&gt;  $User.Id &amp;&amp;
 
 $Profile.Id  &lt;&gt; &quot;00eo0000000uvB5&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000TUb7&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000fznJ&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000f645&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000TUaz&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo00000013vGj&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000g2vT&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00eo0000000PswQ&quot; &amp;&amp;
 $Profile.Id  &lt;&gt; &quot;00e1N000000h1I9&quot; &amp;&amp; 
 $Profile.Id  &lt;&gt; &quot;00e1N000000cUsO&quot; &amp;&amp; 
 $Profile.Id  &lt;&gt; &quot;00eo0000000f7LO&quot;</errorConditionFormula>
        <errorMessage>OP-012. Solamente el propietario del cliente puede crear o modificar la oportunidad.</errorMessage>
    </validationRules>
</CustomObject>